src/c-wgpu.zig

pub const WGPUTextureFormat_ASTC8x8UnormSrgb: c_int = 89;
pub const WGPUTextureFormat_ASTC10x5Unorm: c_int = 90;
pub const WGPUTextureFormat_ASTC10x5UnormSrgb: c_int = 91;
pub const WGPUTextureFormat_ASTC10x6Unorm: c_int = 92;
pub const WGPUTextureFormat_ASTC10x6UnormSrgb: c_int = 93;
pub const WGPUTextureFormat_ASTC10x8Unorm: c_int = 94;
pub const WGPUTextureFormat_ASTC10x8UnormSrgb: c_int = 95;
pub const WGPUTextureFormat_ASTC10x10Unorm: c_int = 96;
pub const WGPUTextureFormat_ASTC10x10UnormSrgb: c_int = 97;
pub const WGPUTextureFormat_ASTC12x10Unorm: c_int = 98;
pub const WGPUTextureFormat_ASTC12x10UnormSrgb: c_int = 99;
pub const WGPUTextureFormat_ASTC12x12Unorm: c_int = 100;
pub const WGPUTextureFormat_ASTC12x12UnormSrgb: c_int = 101;
pub const WGPUTextureFormat_Force32: c_int = 2147483647;
pub const enum_WGPUTextureFormat = c_uint;
pub const WGPUTextureFormat = enum_WGPUTextureFormat;
pub const struct_WGPURenderBundleEncoderDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    colorFormatCount: usize = 0,
    colorFormats: [*c]const WGPUTextureFormat = null,
    depthStencilFormat: WGPUTextureFormat = @import("std").mem.zeroes(WGPUTextureFormat),
    sampleCount: u32 = 0,
    depthReadOnly: WGPUBool = 0,
    stencilReadOnly: WGPUBool = 0,
};
pub const WGPULoadOp_Undefined: c_int = 0;
pub const WGPULoadOp_Load: c_int = 1;
pub const WGPULoadOp_Clear: c_int = 2;
pub const WGPULoadOp_Force32: c_int = 2147483647;
pub const enum_WGPULoadOp = c_uint;
pub const WGPULoadOp = enum_WGPULoadOp;
pub const WGPUStoreOp_Undefined: c_int = 0;
pub const WGPUStoreOp_Store: c_int = 1;
pub const WGPUStoreOp_Discard: c_int = 2;
pub const WGPUStoreOp_Force32: c_int = 2147483647;
pub const enum_WGPUStoreOp = c_uint;
pub const WGPUStoreOp = enum_WGPUStoreOp;
pub const struct_WGPURenderPassDepthStencilAttachment = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    view: WGPUTextureView = null,
    depthLoadOp: WGPULoadOp = @import("std").mem.zeroes(WGPULoadOp),
    depthStoreOp: WGPUStoreOp = @import("std").mem.zeroes(WGPUStoreOp),
    depthClearValue: f32 = 0,
    depthReadOnly: WGPUBool = 0,
    stencilLoadOp: WGPULoadOp = @import("std").mem.zeroes(WGPULoadOp),
    stencilStoreOp: WGPUStoreOp = @import("std").mem.zeroes(WGPUStoreOp),
    stencilClearValue: u32 = 0,
    stencilReadOnly: WGPUBool = 0,
};
pub const struct_WGPURenderPassMaxDrawCount = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    maxDrawCount: u64 = 0,
};
pub const struct_WGPURequestAdapterWebXROptions = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    xrCompatible: WGPUBool = 0,
};
pub const WGPUSamplerBindingType_BindingNotUsed: c_int = 0;
pub const WGPUSamplerBindingType_Undefined: c_int = 1;
pub const WGPUSamplerBindingType_Filtering: c_int = 2;
pub const WGPUSamplerBindingType_NonFiltering: c_int = 3;
pub const WGPUSamplerBindingType_Comparison: c_int = 4;
pub const WGPUSamplerBindingType_Force32: c_int = 2147483647;
pub const enum_WGPUSamplerBindingType = c_uint;
pub const WGPUSamplerBindingType = enum_WGPUSamplerBindingType;
pub const struct_WGPUSamplerBindingLayout = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    type: WGPUSamplerBindingType = @import("std").mem.zeroes(WGPUSamplerBindingType),
};
pub const WGPUAddressMode_Undefined: c_int = 0;
pub const WGPUAddressMode_ClampToEdge: c_int = 1;
pub const WGPUAddressMode_Repeat: c_int = 2;
pub const WGPUAddressMode_MirrorRepeat: c_int = 3;
pub const WGPUAddressMode_Force32: c_int = 2147483647;
pub const enum_WGPUAddressMode = c_uint;
pub const WGPUAddressMode = enum_WGPUAddressMode;
pub const WGPUFilterMode_Undefined: c_int = 0;
pub const WGPUFilterMode_Nearest: c_int = 1;
pub const WGPUFilterMode_Linear: c_int = 2;
pub const WGPUFilterMode_Force32: c_int = 2147483647;
pub const enum_WGPUFilterMode = c_uint;
pub const WGPUFilterMode = enum_WGPUFilterMode;
pub const WGPUMipmapFilterMode_Undefined: c_int = 0;
pub const WGPUMipmapFilterMode_Nearest: c_int = 1;
pub const WGPUMipmapFilterMode_Linear: c_int = 2;
pub const WGPUMipmapFilterMode_Force32: c_int = 2147483647;
pub const enum_WGPUMipmapFilterMode = c_uint;
pub const WGPUMipmapFilterMode = enum_WGPUMipmapFilterMode;
pub const WGPUCompareFunction_Undefined: c_int = 0;
pub const WGPUCompareFunction_Never: c_int = 1;
pub const WGPUCompareFunction_Less: c_int = 2;
pub const WGPUCompareFunction_Equal: c_int = 3;
pub const WGPUCompareFunction_LessEqual: c_int = 4;
pub const WGPUCompareFunction_Greater: c_int = 5;
pub const WGPUCompareFunction_NotEqual: c_int = 6;
pub const WGPUCompareFunction_GreaterEqual: c_int = 7;
pub const WGPUCompareFunction_Always: c_int = 8;
pub const WGPUCompareFunction_Force32: c_int = 2147483647;
pub const enum_WGPUCompareFunction = c_uint;
pub const WGPUCompareFunction = enum_WGPUCompareFunction;
pub const struct_WGPUSamplerDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    addressModeU: WGPUAddressMode = @import("std").mem.zeroes(WGPUAddressMode),
    addressModeV: WGPUAddressMode = @import("std").mem.zeroes(WGPUAddressMode),
    addressModeW: WGPUAddressMode = @import("std").mem.zeroes(WGPUAddressMode),
    magFilter: WGPUFilterMode = @import("std").mem.zeroes(WGPUFilterMode),
    minFilter: WGPUFilterMode = @import("std").mem.zeroes(WGPUFilterMode),
    mipmapFilter: WGPUMipmapFilterMode = @import("std").mem.zeroes(WGPUMipmapFilterMode),
    lodMinClamp: f32 = 0,
    lodMaxClamp: f32 = 0,
    compare: WGPUCompareFunction = @import("std").mem.zeroes(WGPUCompareFunction),
    maxAnisotropy: u16 = 0,
};
pub const struct_WGPUShaderSourceSPIRV = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    codeSize: u32 = 0,
    code: [*c]const u32 = null,
};
pub const struct_WGPUShaderSourceWGSL = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    code: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
};
pub const WGPUStencilOperation_Undefined: c_int = 0;
pub const WGPUStencilOperation_Keep: c_int = 1;
pub const WGPUStencilOperation_Zero: c_int = 2;
pub const WGPUStencilOperation_Replace: c_int = 3;
pub const WGPUStencilOperation_Invert: c_int = 4;
pub const WGPUStencilOperation_IncrementClamp: c_int = 5;
pub const WGPUStencilOperation_DecrementClamp: c_int = 6;
pub const WGPUStencilOperation_IncrementWrap: c_int = 7;
pub const WGPUStencilOperation_DecrementWrap: c_int = 8;
pub const WGPUStencilOperation_Force32: c_int = 2147483647;
pub const enum_WGPUStencilOperation = c_uint;
pub const WGPUStencilOperation = enum_WGPUStencilOperation;
pub const struct_WGPUStencilFaceState = extern struct {
    compare: WGPUCompareFunction = @import("std").mem.zeroes(WGPUCompareFunction),
    failOp: WGPUStencilOperation = @import("std").mem.zeroes(WGPUStencilOperation),
    depthFailOp: WGPUStencilOperation = @import("std").mem.zeroes(WGPUStencilOperation),
    passOp: WGPUStencilOperation = @import("std").mem.zeroes(WGPUStencilOperation),
};
pub const WGPUStorageTextureAccess_BindingNotUsed: c_int = 0;
pub const WGPUStorageTextureAccess_Undefined: c_int = 1;
pub const WGPUStorageTextureAccess_WriteOnly: c_int = 2;
pub const WGPUStorageTextureAccess_ReadOnly: c_int = 3;
pub const WGPUStorageTextureAccess_ReadWrite: c_int = 4;
pub const WGPUStorageTextureAccess_Force32: c_int = 2147483647;
pub const enum_WGPUStorageTextureAccess = c_uint;
pub const WGPUStorageTextureAccess = enum_WGPUStorageTextureAccess;
pub const WGPUTextureViewDimension_Undefined: c_int = 0;
pub const WGPUTextureViewDimension_1D: c_int = 1;
pub const WGPUTextureViewDimension_2D: c_int = 2;
pub const WGPUTextureViewDimension_2DArray: c_int = 3;
pub const WGPUTextureViewDimension_Cube: c_int = 4;
pub const WGPUTextureViewDimension_CubeArray: c_int = 5;
pub const WGPUTextureViewDimension_3D: c_int = 6;
pub const WGPUTextureViewDimension_Force32: c_int = 2147483647;
pub const enum_WGPUTextureViewDimension = c_uint;
pub const WGPUTextureViewDimension = enum_WGPUTextureViewDimension;
pub const struct_WGPUStorageTextureBindingLayout = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    access: WGPUStorageTextureAccess = @import("std").mem.zeroes(WGPUStorageTextureAccess),
    format: WGPUTextureFormat = @import("std").mem.zeroes(WGPUTextureFormat),
    viewDimension: WGPUTextureViewDimension = @import("std").mem.zeroes(WGPUTextureViewDimension),
};
pub const WGPUFeatureName_CoreFeaturesAndLimits: c_int = 1;
pub const WGPUFeatureName_DepthClipControl: c_int = 2;
pub const WGPUFeatureName_Depth32FloatStencil8: c_int = 3;
pub const WGPUFeatureName_TextureCompressionBC: c_int = 4;
pub const WGPUFeatureName_TextureCompressionBCSliced3D: c_int = 5;
pub const WGPUFeatureName_TextureCompressionETC2: c_int = 6;
pub const WGPUFeatureName_TextureCompressionASTC: c_int = 7;
pub const WGPUFeatureName_TextureCompressionASTCSliced3D: c_int = 8;
pub const WGPUFeatureName_TimestampQuery: c_int = 9;
pub const WGPUFeatureName_IndirectFirstInstance: c_int = 10;
pub const WGPUFeatureName_ShaderF16: c_int = 11;
pub const WGPUFeatureName_RG11B10UfloatRenderable: c_int = 12;
pub const WGPUFeatureName_BGRA8UnormStorage: c_int = 13;
pub const WGPUFeatureName_Float32Filterable: c_int = 14;
pub const WGPUFeatureName_Float32Blendable: c_int = 15;
pub const WGPUFeatureName_ClipDistances: c_int = 16;
pub const WGPUFeatureName_DualSourceBlending: c_int = 17;
pub const WGPUFeatureName_Subgroups: c_int = 18;
pub const WGPUFeatureName_TextureFormatsTier1: c_int = 19;
pub const WGPUFeatureName_TextureFormatsTier2: c_int = 20;
pub const WGPUFeatureName_PrimitiveIndex: c_int = 21;
pub const WGPUFeatureName_TextureComponentSwizzle: c_int = 22;
pub const WGPUFeatureName_Force32: c_int = 2147483647;
pub const enum_WGPUFeatureName = c_uint;
pub const WGPUFeatureName = enum_WGPUFeatureName;
pub const struct_WGPUSupportedFeatures = extern struct {
    featureCount: usize = 0,
    features: [*c]const WGPUFeatureName = null,
    pub const wgpuSupportedFeaturesFreeMembers = __root.wgpuSupportedFeaturesFreeMembers;
};
pub const WGPUInstanceFeatureName_TimedWaitAny: c_int = 1;
pub const WGPUInstanceFeatureName_ShaderSourceSPIRV: c_int = 2;
pub const WGPUInstanceFeatureName_MultipleDevicesPerAdapter: c_int = 3;
pub const WGPUInstanceFeatureName_Force32: c_int = 2147483647;
pub const enum_WGPUInstanceFeatureName = c_uint;
pub const WGPUInstanceFeatureName = enum_WGPUInstanceFeatureName;
pub const struct_WGPUSupportedInstanceFeatures = extern struct {
    featureCount: usize = 0,
    features: [*c]const WGPUInstanceFeatureName = null,
    pub const wgpuGetInstanceFeatures = __root.wgpuGetInstanceFeatures;
    pub const wgpuSupportedInstanceFeaturesFreeMembers = __root.wgpuSupportedInstanceFeaturesFreeMembers;
};
pub const WGPUWGSLLanguageFeatureName_ReadonlyAndReadwriteStorageTextures: c_int = 1;
pub const WGPUWGSLLanguageFeatureName_Packed4x8IntegerDotProduct: c_int = 2;
pub const WGPUWGSLLanguageFeatureName_UnrestrictedPointerParameters: c_int = 3;
pub const WGPUWGSLLanguageFeatureName_PointerCompositeAccess: c_int = 4;
pub const WGPUWGSLLanguageFeatureName_UniformBufferStandardLayout: c_int = 5;
pub const WGPUWGSLLanguageFeatureName_SubgroupId: c_int = 6;
pub const WGPUWGSLLanguageFeatureName_TextureAndSamplerLet: c_int = 7;
pub const WGPUWGSLLanguageFeatureName_SubgroupUniformity: c_int = 8;
pub const WGPUWGSLLanguageFeatureName_TextureFormatsTier1: c_int = 9;
pub const WGPUWGSLLanguageFeatureName_Force32: c_int = 2147483647;
pub const enum_WGPUWGSLLanguageFeatureName = c_uint;
pub const WGPUWGSLLanguageFeatureName = enum_WGPUWGSLLanguageFeatureName;
